docs: document v26_2 scaffold + common/utils migration + B-class decision
Close-out the docs for stage 1.1 + stage 1.1B + stage 3 + stage 7:

- README.md: platform table now lists v26_2 row (placeholder NeoForge
  columns), runClient command mentions v26_2 as future target,
  "Multiloader 重构进度" calls out the common/utils migration, v26_2
  placeholder NeoForge dependency, and the B-class acceptance.
- CHANGELOG.md: new "未发布 — Multiloader 扩展" section enumerates
  v26_2 scaffold, common/utils A-class migration, planning doc ingest,
  and the explicit B-class decision (6 files stay platform-located).
- .planning/STATE.md: refreshed phase status + last-commit list
  (now `ef9e616`), explicit per-stage rollup.
- .planning/ROADMAP.md: phase 7 promoted from [ ] to [~] partial,
  with stage 1.1 / stage 1.1B callouts; new phase 12 for v26_2 third
  platform documenting stage 3 done + stage 4-6 blocked on real
  NeoForge 26.2 release coordinates. Status snapshot table extended.
- .planning/REQUIREMENTS.md: implicit-requirements table gets two new
  done rows (common/utils shared, v26_2 scaffold); new explicit
  REQ-v26-2-platform entry with 11 acceptance criteria (4 done, 7
  blocked on real 26.2 versions).
- CONTRIBUTING.md: build matrix table (1.21.1 / 26.1.2 / 26.2),
  Java 25 + --enable-preview noted for both v26_1_2 and v26_2, project
  structure tree expanded with v26_2 subtree.

Verified: active_versions=26.1.2 still keeps the repo in a buildable
state; the v26_2 placeholder NeoGradle version only breaks builds if
active_versions is flipped to 26.2 before user provides real coords.

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>